# trening

./: pyproject.toml
src/: taxes.py
tests/: conftest.py  test_counter.py  test_taxes.py
